--- a/Assigment/week 1 Create HTML file/Firststep.html
+++ b/Assigment/week 1 Create HTML file/Firststep.html
@@ -10,9 +10,9 @@
 
 <body>
 
-<h1> First Lesson  on FMA </h1>
+<h1> First Lesson  at FMA </h1>
 
-<p> Welcome to my firs lesson .  </p>
+<p> Welcome to my first lesson .  </p>
 
 <h2> This is  Week 1  </h2>
 
