--- a/Assigment/week 1 Create HTML file/VScode/myfirstwebside.html
+++ b/Assigment/week 1 Create HTML file/VScode/myfirstwebside.html
@@ -21,7 +21,9 @@
      <ol> <li><i>The Good Doctor</i></li> 
      <li><i>Game Of Thrones</i></li>
      <li><i>ChicagoMed</i></li></ol> 
- <p><a href="mailto:dakisalihu@gmail.com">Email: dakisalihu@gmail.com</a></p>    
+ <p><a href="mailto:dakisalihu@gmail.com">Email: dakisalihu@gmail.com</a></p>
+ 
+ <link rel="stylesheet" href="style.css"> https://www.instagram.com/
 <br>
 <br>
 <br>
