--- a/Assigment/week 1 Create HTML file/VScode/myfirstwebside.html
+++ b/Assigment/week 1 Create HTML file/VScode/myfirstwebside.html
@@ -21,6 +21,12 @@
      <ol> <li><i>The Good Doctor</i></li> 
      <li><i>Game Of Thrones</i></li>
      <li><i>ChicagoMed</i></li></ol> 
+     <p>My favorite animal: </p>
+    <img src="image/Tiger.jpeg" width="200" height="130" alt="Tiger" />
+     <br>
+     <br>
+     <br>
+
  <p><a href="mailto:dakisalihu@gmail.com">Email: dakisalihu@gmail.com</a></p>
 
  <p><a href="https://www.instagram.com/dakkisalihu/">Instagram.com/dakkisalihu</a></p>
