--- a/Assigment/[Week 1] 4. Image/Img.html
+++ b/Assigment/[Week 1] 4. Image/Img.html
@@ -24,7 +24,7 @@
 It is widely distributed, and is considered an invasive species
 in many world regions. An evergreen perennial, it originates from the
  Arabian Peninsula, but grows wild in tropical, semi-tropical, 
- and arid climates around the worl</p>
+ and arid climates around the world.</p>
 <p>If you want to know about aloe vera benefits you can click <a href="https://www.health.com/aloe-vera-juice-benefits-7550606"><em>here.</em></a></p>
 <br>
 <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSGbdn_HSPmBH0SxuE_4ES6ful8Z8XnWabU6PHleU3RbExPYhLsz3n3YN-CW7W9mXccoso&usqp=CAU"
