--- a/Assigment/[Week 1] 5. Tables/1.Threesimpletables.html
+++ b/Assigment/[Week 1] 5. Tables/1.Threesimpletables.html
@@ -10,15 +10,22 @@
 <h1>Table 1:</h1>
 <table border="1" width="50%">
     <tr>
-        <th>Emri</th>
-        <th>Mbiemri</th>
-        <th>Qyteti</th>
+        <th>*</th>
+        <th>2</th>
+        <th>3</th>
 
     </tr>
+<tr>
+<th>2</th>
+<td>4</td>
+<td>6</td>
+
+</tr>
+
     <tr>
-        <td><i>Dafina</i></td>
-        <td><i>Salihu</i></td>
-        <td><i>Gjilan</i</td>
+        <th>3</th>
+        <td>6</td>
+        <td>9</td>
 
 
     </tr>
@@ -71,7 +78,8 @@
 </tr>
 <tr>
 <th>Favorite dog</th>
-<td><b>Siberian</b> Husky<img src="https://encrypted-tbn2.gstatic.com/licensed-image?q=tbn:ANd9GcQ0XzWMxNYlsVlI3D5vsmA21XlCTKzwGjwA2GE7f_6B4S8j00VTX8NzVkSg2Fq1LAwOevKg5aVxjBHcw-4" width="200" height="200" alt="Siberian Husky"></td>
+<td><b>Siberian</b> Husky<img src="https://encrypted-tbn2.gstatic.com/licensed-image?q=tbn:ANd9GcQ0XzWMxNYlsVlI3D5vsmA21XlCTKzwGjwA2GE7f_6B4S8j00VTX8NzVkSg2Fq1LAwOevKg5aVxjBHcw-4"
+     width="150" height="150" alt="Siberian Husky"></td>
 
 
 
