code te strukturuara

--- a/Assigment/[Week 1] 4. Image/Img.html
+++ b/Assigment/[Week 1] 4. Image/Img.html
@@ -1,45 +1,43 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>AloeVera</title>
 </head>
+
 <body>
     <h3><a href="https://www.health.com/aloe-vera-juice-benefits-7550606">Aloe Vera</a></h3>
- <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSGbdn_HSPmBH0SxuE_4ES6ful8Z8XnWabU6PHleU3RbExPYhLsz3n3YN-CW7W9mXccoso&usqp=CAU"
-  alt="Aloe Vera" 
-  width="150" height="150" >
- 
-  <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcS_A6SNNLaLFFswPTgZFgZU2xcjU6asMZB3yg&usqp=CAU"
-   alt="Aloe Vera"
-   width="150" height="150">
-  
-   <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTeaseCdN_GhMwJIj7SazKLcL4-nEJdaWDN3CvyxdmM42wJHtFvNfASpjDf2FzItCZqlAw&usqp=CAU" 
-   alt="Aloe Vera"
-   width="150" height="150">
-<br>
-<br>
-<p>Aloe vera is a succulent plant species of the genus Aloe.
-It is widely distributed, and is considered an invasive species
-in many world regions. An evergreen perennial, it originates from the
- Arabian Peninsula, but grows wild in tropical, semi-tropical, 
- and arid climates around the world.</p>
-<p>If you want to know about aloe vera benefits you can click <a href="https://www.health.com/aloe-vera-juice-benefits-7550606"><em>here.</em></a></p>
-<br>
-<img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSGbdn_HSPmBH0SxuE_4ES6ful8Z8XnWabU6PHleU3RbExPYhLsz3n3YN-CW7W9mXccoso&usqp=CAU"
- alt="Aloe Vera"
- width="150" height="150">
-<br>
-<img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcS_A6SNNLaLFFswPTgZFgZU2xcjU6asMZB3yg&usqp=CAU"
- alt="Aloe Vera"
- width="150" height="150">
- <br>
- <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTeaseCdN_GhMwJIj7SazKLcL4-nEJdaWDN3CvyxdmM42wJHtFvNfASpjDf2FzItCZqlAw&usqp=CAU" 
- alt="Aloe Vera"
- width="150" height="150">
+    <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSGbdn_HSPmBH0SxuE_4ES6ful8Z8XnWabU6PHleU3RbExPYhLsz3n3YN-CW7W9mXccoso&usqp=CAU"
+        alt="Aloe Vera" width="150" height="150">
+
+    <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcS_A6SNNLaLFFswPTgZFgZU2xcjU6asMZB3yg&usqp=CAU"
+        alt="Aloe Vera" width="150" height="150">
+
+    <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTeaseCdN_GhMwJIj7SazKLcL4-nEJdaWDN3CvyxdmM42wJHtFvNfASpjDf2FzItCZqlAw&usqp=CAU"
+        alt="Aloe Vera" width="150" height="150">
+    <br>
+    <br>
+    <p>Aloe vera is a succulent plant species of the genus Aloe.
+        It is widely distributed, and is considered an invasive species
+        in many world regions. An evergreen perennial, it originates from the
+        Arabian Peninsula, but grows wild in tropical, semi-tropical,
+        and arid climates around the world.</p>
+    <p>If you want to know about aloe vera benefits you can click <a
+            href="https://www.health.com/aloe-vera-juice-benefits-7550606"><em>here.</em></a></p>
+    <br>
+    <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSGbdn_HSPmBH0SxuE_4ES6ful8Z8XnWabU6PHleU3RbExPYhLsz3n3YN-CW7W9mXccoso&usqp=CAU"
+        alt="Aloe Vera" width="150" height="150">
+    <br>
+    <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcS_A6SNNLaLFFswPTgZFgZU2xcjU6asMZB3yg&usqp=CAU"
+        alt="Aloe Vera" width="150" height="150">
+    <br>
+    <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTeaseCdN_GhMwJIj7SazKLcL4-nEJdaWDN3CvyxdmM42wJHtFvNfASpjDf2FzItCZqlAw&usqp=CAU"
+        alt="Aloe Vera" width="150" height="150">
 
 
 
 </body>
+
 </html>
