--- a/Assigment/[Week 1] 5. Tables/2.Tableswithrowspanandcolspan.html
+++ b/Assigment/[Week 1] 5. Tables/2.Tableswithrowspanandcolspan.html
@@ -4,15 +4,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Tables with rowspan and colspan</title>
 </head>
 
 <body>
-    <title>Tables with rowspan and colspan</title>
+
     <table border="1" width="100%">
         <tr>
-            <td><strong>Company</strong></td>
-            <td><strong>Model</strong></td>
+            <th>Company</th>
+            <th>Model</th>
         </tr>
 
         <tr>
