--- a/Assigment/[Week 1] 6. Form/LogIn.html
+++ b/Assigment/[Week 1] 6. Form/LogIn.html
@@ -25,7 +25,7 @@
             <input type="submit" id="Login" name="Login" value="Log in">
         </div>
 
-        <p>Don't have an account? <a href="Register.html">Sign up here!</a> </p>
+        <p>Don't have an account? <a href="register.html">Sign up here!</a> </p>
 
 
     </form>
