--- a/Assigment/[Week 1] 6. Form/Register.html
+++ b/Assigment/[Week 1] 6. Form/Register.html
@@ -60,7 +60,7 @@
             <input type="checkbox" id="accept" name="aceppt">
         </div>
 
-        <p>Already have an account <a href="LogIn.html"> Log in here!</a> </p>
+        <p>Already have an account <a href="login.html"> Log in here!</a> </p>
     </form>
 </body>
 
