--- a/Assigment/[Week 1] 6. Form/LogIn.html
+++ b/Assigment/[Week 1] 6. Form/LogIn.html
@@ -22,7 +22,7 @@
 
         <div>
 
-            <input type="submit" id="Login" name="Login" value="Log in">
+            <input type="submit" id="login" name="login" value="Log in">
         </div>
 
         <p>Don't have an account? <a href="register.html">Sign up here!</a> </p>
