--- a/Assigment/[Week 2] 1.Simantic/simantic.html
+++ b/Assigment/[Week 2] 1.Simantic/simantic.html
@@ -36,7 +36,7 @@
                 area
                 and especially at the much-studied Gault Archeological Site, north of the city.</p>
             <figure>
-                <img src="austin.jpg" alt="austin" width="300" height="300">
+                <img src="images/austin.jpg" alt="austin" width="300" height="300">
             </figure>
             <p>Excavations at the Gault site</p>
 
