--- a/Assigment/[Week 1] 4.1 Servinglocalimages/servinglocalimages.html
+++ b/Assigment/[Week 1] 4.1 Servinglocalimages/servinglocalimages.html
@@ -10,7 +10,7 @@
 <body>
     <h2>Butterfly</h2>
     <br>
-    <img src="images/butterfly.jpg" alt="butterfly" width="300" height="250">
+    <img src="images/butterfly.jpgS" alt="butterfly" width="300" height="250">
 
 
 </body>
