--- a/Assigment/[Week 2] 1.Simantic/simantic.html
+++ b/Assigment/[Week 2] 1.Simantic/simantic.html
@@ -21,33 +21,35 @@
 
     </header>
     <main>
-    <article>
-        <section>
-            <h1>Austin History</h1>
-            <p>The city of Austin has a rich culture informed by a unique history unlike anywhere else in the world.</p>
+        <article>
+            <section>
+                <h1>Austin History</h1>
+                <p>The city of Austin has a rich culture informed by a unique history unlike anywhere else in the world.
+                </p>
 
-            <p>Written by Fred Frederson</p>
+                <p>Written by Fred Frederson</p>
 
-            <p>Last updated: June 22, 2018</p>
+                <p>Last updated: June 22, 2018</p>
 
-            <h2>Earliest Inhabitants</h2>
+                <h2>Earliest Inhabitants</h2>
 
-            <p>The earliest known inhabitants of the area lived around 9200 BC, based on evidence found throughout the
-                area
-                and especially at the much-studied Gault Archeological Site, north of the city.</p>
-            <figure>
-                <img src="images/austin.jpg" alt="austin" width="300" height="300">
-            </figure>
-            <p>Excavations at the Gault site</p>
+                <p>The earliest known inhabitants of the area lived around 9200 BC, based on evidence found throughout
+                    the
+                    area
+                    and especially at the much-studied Gault Archeological Site, north of the city.</p>
+                <figure>
+                    <img src="images/austin.jpg" alt="austin" width="300" height="300">
+                </figure>
+                <p>Excavations at the Gault site</p>
 
-            <h2>Native Peoples</h2>
+                <h2>Native Peoples</h2>
 
-            <p>When Europeans arrived, the area was inhabited by the Tonkawa tribe. Comanches and Lipan Apaches also
-                traveled in the region. Though they came into contact with Spanish explorers and missions, few
-                settlements
-                were established for several centuries.</p>
-        </section>
-    </article>
+                <p>When Europeans arrived, the area was inhabited by the Tonkawa tribe. Comanches and Lipan Apaches also
+                    traveled in the region. Though they came into contact with Spanish explorers and missions, few
+                    settlements
+                    were established for several centuries.</p>
+            </section>
+        </article>
     </main>
 
     <aside>
