--- a/Assigment/[Week 2] 4. Html In Action/page_3.html
+++ b/Assigment/[Week 2] 4. Html In Action/page_3.html
@@ -17,7 +17,7 @@
 
     <h1>Page 3</h1>
 
-    <ol>
+    <ol start="21">
         <li id="Q21">Which pop star burnt down her home gym with candles?
             <a href="answers.html#A21">Answers</a>
             <ol type="A">
@@ -43,7 +43,7 @@
             <ol type="A">
                 <li>France</li>
                 <li>USA</li>
-                <li>Canada/li>
+                <li>Canada<li>
                 <li>Russia</li>
             </ol>
         </li>
