--- a/Assigment/[Week 2] 4. Html In Action/page_3.html
+++ b/Assigment/[Week 2] 4. Html In Action/page_3.html
@@ -18,7 +18,7 @@
     <h1>Page 3</h1>
 
     <ol start="21">
-        <li> id="Q21">Which pop star burnt down her home gym with candles?
+        <li id="Q21">Which pop star burnt down her home gym with candles?
             <a href="answers.html#A21">Answers</a>
             <ol type="A">
                 <li>Kim Kardashian</li>
@@ -28,7 +28,7 @@
             </ol>
         </li>
 
-        <li> id="Q22">What is the highest-grossing video game franchise to date?
+        <li id="Q22">What is the highest-grossing video game franchise to date?
             <a href="answers.html#A22">Answers</a>
             <ol type="A">
                 <li>Mario</li>
@@ -38,7 +38,7 @@
             </ol>
         </li>
 
-        <li> id="Q23">“Cirque du Soleil” started in what country?
+        <li id="Q23"> “Cirque du Soleil” started in what country?
             <a href="answers.html#A23">Answers</a>
             <ol type="A">
                 <li>France</li>
@@ -47,6 +47,14 @@
                 <li>Russia</li>
             </ol>
         </li>
+
+     
+    
+
+
+
+
+
 
 
     </ol>
