--- a/Assigment/[Week 2] 4. Html In Action/page_3.html
+++ b/Assigment/[Week 2] 4. Html In Action/page_3.html
@@ -43,13 +43,14 @@
             <ol type="A">
                 <li>France</li>
                 <li>USA</li>
-                <li>Canada<li>
+                <li>Canada
+                <li>
                 <li>Russia</li>
             </ol>
         </li>
 
-     
-    
+
+
 
 
 
