--- a/Assigment/[Week 2] 4. Html In Action/answers.html
+++ b/Assigment/[Week 2] 4. Html In Action/answers.html
@@ -245,6 +245,99 @@
             </ol>
         </li>
 
+        <li id="A24">Where is recognized as the location of the hottest temperature ever recorded on Earth?
+            <a href="page_3.html#Q24">Back to question</a>
+            <ol type="A">
+                <li>Mitribah, Kuwait</li>
+                <li>Death Valley, California</li>
+                <li>Yuma, Arizona</li>
+                <li>Key West, Florida</li>
+            </ol>
+        </li>
+
+        <li id="A25">What is the oldest soft drink in the United States?
+            <a href="page_3.html#Q25">Back to question</a>
+            <ol type="A">
+                <li>Coca Cola</li>
+                <li>Pepsi</li>
+                <li>Dr. Pepper</li>
+                <li>Canada Dry Ginger Ale</li>
+            </ol>
+        </li>
+
+        <li id="A26">What river passes through New Orleans, Louisiana?
+            <a href="page_3.html#Q26">Back to question</a>
+            <ol type="A">
+                <li>Orleans River</li>
+                <li>Mississippi River</li>
+                <li>Atchafalaya River</li>
+                <li>Colorado River</li>
+            </ol>
+        </li>
+
+        <li id="A27">In what country do more than half of people believe in elves?
+            <a href="page_3.html#Q27">Back to question</a>
+            <ol type="A">
+                <li>Norway</li>
+                <li>Russia</li>
+                <li>Holland</li>
+                <li>Iceland</li>
+            </ol>
+        </li>
+
+        <li id="A28">What is the name of the coffee shop in the sitcom Friends?
+            <a href="page_3.html#Q28">Back to question</a>
+            <ol type="A">
+                <li>Central Perk</li>
+                <li>Java Park</li>
+                <li>Central Park CoffeE</li>
+                <li>Central Park Roastery</li>
+            </ol>
+        </li>
+
+        <li id="A29">What is the name of the coffee shop in the sitcom Friends?
+            <a href="page_3.html#Q29">Back to question</a>
+            <ol type="A">
+                <li>Central Perk</li>
+                <li>Java Park</li>
+                <li>Central Park CoffeE</li>
+                <li>Central Park Roastery</li>
+            </ol>
+        </li>
+
+
+        <li id="A30">What is the name of the coffee shop in the sitcom Friends?
+            <a href="page_3.html#Q30">Back to question</a>
+            <ol type="A">
+                <li>Central Perk</li>
+                <li>Java Park</li>
+                <li>Central Park CoffeE</li>
+                <li>Central Park Roastery</li>
+            </ol>
+        </li>
+
+
+       
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
     </ol>
