--- a/Assigment/[Week 2] 4. Html In Action/page_3.html
+++ b/Assigment/[Week 2] 4. Html In Action/page_3.html
@@ -51,6 +51,75 @@
 
 
 
+        <li id="Q24">Where is recognized as the location of the hottest temperature ever recorded on Earth?
+            <a href="answers.html#A24">Answers</a>
+            <ol type="A">
+                <li>Mitribah, Kuwait</li>
+                <li>Death Valley, California</li>
+                <li>Yuma, Arizona</li>
+                <li>Key West, Florida</li>
+            </ol>
+        </li>
+
+        <li id="Q25">What is the oldest soft drink in the United States?
+            <a href="answers.html#A25">Answers</a>
+            <ol type="A">
+                <li>Coca Cola</li>
+                <li>Pepsi</li>
+                <li>Dr. Pepper</li>
+                <li>Canada Dry Ginger Ale</li>
+            </ol>
+        </li>
+
+        <li id="Q27">What river passes through New Orleans, Louisiana?
+            <a href="answers.html#A27">Answers</a>
+            <ol type="A">
+                <li>Orleans River</li>
+                <li>Mississippi River</li>
+                <li>Atchafalaya River</li>
+                <li>Colorado River</li>
+            </ol>
+        </li>
+
+        <li id="Q28">In what country do more than half of people believe in elves?
+            <a href="answers.html#A28">Answers</a>
+            <ol type="A">
+                <li>Norway</li>
+                <li>Russia</li>
+                <li>Holland</li>
+                <li>Iceland</li>
+            </ol>
+        </li>
+
+        <li id="Q29">What is the name of the coffee shop in the sitcom Friends?
+            <a href="answers.html#A29">Answers</a>
+            <ol type="A">
+                <li>Central Perk</li>
+                <li>Java Park</li>
+                <li>Central Park CoffeE</li>
+                <li>Central Park Roastery</li>
+            </ol>
+        </li>
+
+        <li id="Q30">What is the name of the coffee shop in the sitcom Friends?
+            <a href="answers.html#A30">Answers</a>
+            <ol type="A">
+                <li>Central Perk</li>
+                <li>Java Park</li>
+                <li>Central Park CoffeE</li>
+                <li>Central Park Roastery</li>
+            </ol>
+        </li>
+
+
+
+
+
+
+
+
+
+
 
 
 
