--- a/Assigment/[Week 2] 4. Html In Action/page_3.html
+++ b/Assigment/[Week 2] 4. Html In Action/page_3.html
@@ -71,8 +71,8 @@
             </ol>
         </li>
 
-        <li id="Q27">What river passes through New Orleans, Louisiana?
-            <a href="answers.html#A27">Answers</a>
+        <li id="Q26">What river passes through New Orleans, Louisiana?
+            <a href="answers.html#A26">Answers</a>
             <ol type="A">
                 <li>Orleans River</li>
                 <li>Mississippi River</li>
@@ -81,13 +81,23 @@
             </ol>
         </li>
 
-        <li id="Q28">In what country do more than half of people believe in elves?
-            <a href="answers.html#A28">Answers</a>
+        <li id="Q27">In what country do more than half of people believe in elves?
+            <a href="answers.html#A27">Answers</a>
             <ol type="A">
                 <li>Norway</li>
                 <li>Russia</li>
                 <li>Holland</li>
                 <li>Iceland</li>
+            </ol>
+        </li>
+
+        <li id="Q28">What is the name of the coffee shop in the sitcom Friends?
+            <a href="answers.html#A28">Answers</a>
+            <ol type="A">
+                <li>Central Perk</li>
+                <li>Java Park</li>
+                <li>Central Park CoffeE</li>
+                <li>Central Park Roastery</li>
             </ol>
         </li>
 
@@ -101,6 +111,7 @@
             </ol>
         </li>
 
+
         <li id="Q30">What is the name of the coffee shop in the sitcom Friends?
             <a href="answers.html#A30">Answers</a>
             <ol type="A">
@@ -110,8 +121,6 @@
                 <li>Central Park Roastery</li>
             </ol>
         </li>
-
-
 
 
 
