--- a/Project/[Week 3] Final Project/myprojects.html
+++ b/Project/[Week 3] Final Project/myprojects.html
@@ -190,7 +190,7 @@
         </article>
         <br><br><br>
 
-        <!-- Project 3-->
+        <!-- Project 3 -->
 
         <article>
             <fieldset>
@@ -257,6 +257,7 @@
         <hr>
         <p>All right reserved Dafina Salihu &copy;</p>
     </footer>
+    <!--Projektet e mia jan te improvizuara thjesht jam munduar te jem pak kreative.-->
 </body>
 
 </html>
