--- a/Project/[Week 3] Final Project/contact.html
+++ b/Project/[Week 3] Final Project/contact.html
@@ -23,10 +23,10 @@
             <hr>
         </nav>
     </header>
-    <footer>
 
-        <h2>Send me a message</h2>
+    <h1>Send me a message</h1>
 
+    <main>
         <label for="email">Email</label>
         <input type="email" id="email" name="email" placeholder="Email" required>
 
@@ -46,6 +46,8 @@
                     height="30"></a>
         </p>
         <hr>
+    </main>
+    <footer>
         <p>All right reserved Dafina Salihu &copy;</p>
     </footer>
 
