--- a/Project/[Week 3] Final Project/contact.html
+++ b/Project/[Week 3] Final Project/contact.html
@@ -28,7 +28,7 @@
 
     <main>
         <label for="email">Email</label>
-        <input type="email" id="email" name="email" placeholder="Email" required>
+        <input type="email" id="email" name="email" placeholder="Your Email" required>
 
         <br>
 
@@ -41,7 +41,8 @@
 
         <p><a href="https://www.instagram.com/dakkisalihu/"><img src="image/Instagram.jpg" alt="instagramincon"
                     width="30" height="30"></a>
-
+            <a href="https://www.linkedin.com/in/dafina-salihu-871874233/"> <img src="image/linkedIn.png.crdownload"
+                    alt="linkedlnlogo" width="30" height="30"> </a>
             <a href="mailto:dakisalihu@gmail.com"><img src="image/gmaillogo1.png" alt="gmailiconS" width="30"
                     height="30"></a>
         </p>
