--- a/Project/[Week 3] Final Project/myprojects.html
+++ b/Project/[Week 3] Final Project/myprojects.html
@@ -73,7 +73,7 @@
                         <h3>Our location</h3>
                         <iframe
                             src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d832.0265940361196!2d21.463722515644783!3d42.45594164592802!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x13548da5ee3408b3%3A0x62bd64c1adccec60!2sBesi%20Hair%20salon!5e0!3m2!1sen!2s!4v1695235400286!5m2!1sen!2s"
-                            width="150" height="150" style="border:0;" allowfullscreen="" loading="lazy"
+                            width="100" height="100" style="border:0;" allowfullscreen="" loading="lazy"
                             referrerpolicy="no-referrer-when-downgrade"></iframe>
                         <address>
                             Rr.Idriz Seferi <br>
@@ -162,7 +162,7 @@
                         </tr>
                     </table>
                     <hr>
-                    <h4>We are open 7 days a week</h4>
+                    <h4>We are open 7 days a week!</h4>
                     <dl>
                         <dt>Sunday-Thursday </dt>
                         <dd>09:00-23:00</dd>
@@ -175,7 +175,7 @@
                     <h3>Our location</h3>
                     <iframe
                         src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2943.2034832147456!2d21.455940076069798!3d42.465960771183205!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x13548d1ad23a85f3%3A0xa1e4f99c6e130ba9!2sPizza%20House!5e0!3m2!1sen!2s!4v1695235634646!5m2!1sen!2s"
-                        width="200" height="200" style="border:0;" allowfullscreen="" loading="lazy"
+                        width="100" height="100" style="border:0;" allowfullscreen="" loading="lazy"
                         referrerpolicy="no-referrer-when-downgrade"></iframe>
                     <address>
                         Rr.Dardania 1 <br>
@@ -225,14 +225,13 @@
                 <p>For Online orders we are open 24h!</p>
                 <hr>
                 <p>Follow us on social media:</p>
-
-                <img src="image/Instagram.jpg" alt="instagramincon" width="30" height="30"></a>
+                <img src="image/Instagram.jpg" alt="instagramincon" width="30" height="30">
 
                 <section>
                     <h3>Our location</h3>
                     <iframe
                         src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d187946.96744444827!2d20.8284044265747!3d42.60471559320056!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x13549fe3c8b03f0d%3A0xc54a63861a63cc8a!2sMINNA%20Fashion!5e0!3m2!1sen!2s!4v1695235735287!5m2!1sen!2s"
-                        width="200" height="200" style="border:0;" allowfullscreen="" loading="lazy"
+                        width="100" height="100" style="border:0;" allowfullscreen="" loading="lazy"
                         referrerpolicy="no-referrer-when-downgrade"></iframe>
                     <address>
                         Magjistralja Prishtin-Ferizaj
@@ -243,21 +242,18 @@
                         <br><br>
                         Phone: <a href="tel+1111111111">+111-111-1111</a>
                         <br>
-
                     </address>
                 </section>
-
             </fieldset>
-
         </article>
-
     </main>
     <footer>
         <a href="#">Back to top</a>
         <hr>
         <p>All right reserved Dafina Salihu &copy;</p>
     </footer>
-    <!--Projektet e mia jan te improvizuara thjesht jam munduar te jem pak kreative.-->
+    <!--Projektet e mia jan te improvizuara thjesht jam munduar te jem pak kreative duke perdorur 
+        tags dhe atribute qe kemi mesuar gjat kursit edhe disa nga tutorials te ndryshem.-->
 </body>
 
 </html>
