--- a/Project/[Week 3] Final Project/contact.html
+++ b/Project/[Week 3] Final Project/contact.html
@@ -24,9 +24,8 @@
         </nav>
     </header>
 
-    <h1>Send me a message</h1>
-
     <main>
+        <h2>Send me a message</h2>
         <label for="email">Email</label>
         <input type="email" id="email" name="email" placeholder="Your Email" required>
 
@@ -43,7 +42,7 @@
                     width="30" height="30"></a>
             <a href="https://www.linkedin.com/in/dafina-salihu-871874233/"> <img src="image/linkedIn.png.crdownload"
                     alt="linkedlnlogo" width="30" height="30"> </a>
-            <a href="mailto:dakisalihu@gmail.com"><img src="image/gmaillogo1.png" alt="gmailiconS" width="30"
+            <a href="mailto:dakisalihu@gmail.com"><img src="image/gmaillogo1.png" alt="gmaillogo" width="30"
                     height="30"></a>
         </p>
         <hr>
