--- a/Project/[Week 3] Final Project/myprojects.html
+++ b/Project/[Week 3] Final Project/myprojects.html
@@ -18,7 +18,7 @@
             <hr>
             <ul>
                 <li> <a href="home.html"> Home&#127968</a> </li>
-                <li> <a href="contact.html">Contact Me </a> </li>
+                <li> <a href="contact.html">Contact Me! </a> </li>
             </ul>
             <hr>
         </nav>
