--- a/Assigment/[Week 2] 2. Video and Audio/favoritecelebrety.html
+++ b/Assigment/[Week 2] 2. Video and Audio/favoritecelebrety.html
@@ -8,37 +8,43 @@
 </head>
 
 <body>
-    <h2>Jennifer Lopez</h2>
-    <p>Jennifer Lynn Lopez-Affleck, known by her maiden name and also shortened to J.Lo, is an American actress, dancer
-        and singer. In 1991, she began appearing as a Fly Girl dancer on the sketch comedy television series In Living
-        Color,where she remained a regular until she decided to pursue an acting career in 1993</p>
+    <main>
+        <header>
+            <h1>Jennifer Lopez</h1>
+        </header>
+        <article>
+            <p>Jennifer Lynn Lopez-Affleck, known by her maiden name and also shortened to J.Lo, is an American actress,
+                dancer
+                and singer. In 1991, she began appearing as a Fly Girl dancer on the sketch comedy television series In
+                Living
+                Color,where she remained a regular until she decided to pursue an acting career in 1993</p>
 
-    <img src="https://images.hellomagazine.com/horizon/square/82076b9c0c80-jennifer-lopez-ponytail-smiling.jpg"
-        alt="Photo of Jennifer Lopez" width="300" height="300">
-    <br>
-    <p>Jennifer Lopez's music career took off with the release of her debut single "If You Had My Love" in 1999. The
-        song quickly became a chart-topping hit.</p>
-    <p>This is a first song of J.Lo</p>
-    <audio controls autoplay loop muted>
+            <img src="https://images.hellomagazine.com/horizon/square/82076b9c0c80-jennifer-lopez-ponytail-smiling.jpg"
+                alt="Photo of Jennifer Lopez" width="300" height="300">
+            <br>
+            <p>Jennifer Lopez's music career took off with the release of her debut single "If You Had My Love" in 1999.
+                The
+                song quickly became a chart-topping hit.</p>
+            <p>This is a first song of J.Lo</p>
+            <audio controls autoplay loop muted>
 
-        <source src="Audio/myaudio.mp3">
+                <source src="Audio/myaudio.mp3">
 
-    </audio>
+            </audio>
+        </article>
+        <section>
+            <h4>Her last movie is The Mother </h4>
+            <p>The Mother While fleeing from dangerous assailants, an assassin comes out of hiding to protect her
+                daughter,
+                whom she left earlier in life.</p>
+            <br>
+            <p>Trailer of The Mother:</p>
+            <video controls autoplay loop muted width="600" height="600">
+                <source src="Video/THE MOTHER _ Jennifer Lopez _ Official Trailer _ Netflix (720p).mp4">
 
-    <h4>Her last movie is The Mother </h4>
-    <p>The Mother While fleeing from dangerous assailants, an assassin comes out of hiding to protect her daughter,
-        whom she left earlier in life.</p>
-    <br>
-    <p>Trailer of The Mother:</p>
-    <video controls autoplay loop muted width="600" height="600">
-        <source src="Video/THE MOTHER _ Jennifer Lopez _ Official Trailer _ Netflix (720p).mp4">
-
-    </video>
-
-
-
-
-
+            </video>
+        </section>
+    </main>
 </body>
 
 </html>
