--- a/Project/[Week 3] Final Project/home.html
+++ b/Project/[Week 3] Final Project/home.html
@@ -15,16 +15,19 @@
 
     <header>
         <h1>Personal Portfolio</h1>
-        <nav area-label="primary-navigation">
-            <hr>
-            <ul>
-                <li> <a href="myprojects.html"> My Projects&#x1F31F;</a> </li>
-                <li> <a href="contact.html">Contact Me! </a> </li>
-            </ul>
-            <hr>
-        </nav>
     </header>
     <main>
+        <article>
+            <nav area-label="primary-navigation">
+                <hr>
+                <ul>
+                    <li> <a href="myprojects.html"> My Projects&#x1F31F;</a> </li>
+                    <li> <a href="contact.html">Contact Me! </a> </li>
+                </ul>
+                <hr>
+            </nav>
+        </article>
+
         <article id="html">
             <h2>Who is Dafina Salihu ?</h2>
             <img src="image/dafina.jpg" alt="Dafina Salihu" width="210" height="250">
@@ -35,7 +38,6 @@
                 learning for coding,my dream is to work with brands globally to create purpose driven websites that
                 leave a lasting impression.
                 I always want to see out the box and i believe i can achive to make my dreams came true..</p>
-
         </article>
 
         <section>
