--- a/Assigment/[Week 2] 1.Simantic/simantic.html
+++ b/Assigment/[Week 2] 1.Simantic/simantic.html
@@ -39,6 +39,7 @@
                     and especially at the much-studied Gault Archeological Site, north of the city.</p>
                 <figure>
                     <img src="images/austin.jpg" alt="austin" width="300" height="300">
+                    <figcaption>Excavations at the Gault site.</figcaption>
                 </figure>
                 <p>Excavations at the Gault site</p>
 
