--- a/Project/[Week 3] Final Project/myprojects.html
+++ b/Project/[Week 3] Final Project/myprojects.html
@@ -14,16 +14,20 @@
 <body>
     <header>
         <h1>Welcome to my projects</h1>
-        <nav area-label="primary-navigation">
-            <hr>
-            <ul>
-                <li> <a href="home.html"> Home&#127968</a> </li>
-                <li> <a href="contact.html">Contact Me! </a> </li>
-            </ul>
-            <hr>
-        </nav>
     </header>
     <main>
+        <article>
+            <nav area-label="primary-navigation">
+                <hr>
+                <ul>
+                    <li> <a href="home.html"> Home&#127968</a> </li>
+                    <li> <a href="contact.html">Contact Me! </a> </li>
+                </ul>
+                <hr>
+            </nav>
+        </article>
+
+
         <Article>
             <fieldset>
                 <legend><strong>Project 1</strong></legend>
@@ -88,17 +92,18 @@
         </Article>
         <br><br><br>
         <!-- Project 2-->
-        <article>
-            <fieldset>
-                <legend><strong>Project 2</strong></legend>
-                <h2 id="H2">Pizza House</h2> <a href="home.htme#P2"></a>
-                <section>
-                    <h4>About Us</h4>
-                    <p>At Pizza House, we believe in giving back to the community that made us and the people who
-                        continue to support us. Over the years we&#39; ve provided food and venue space for countless
-                        fundraisers and charitable organizations.
-                        We also donate over 250 pizzas a year to local schools.</p>
-                </section>
+
+        <fieldset>
+            <legend><strong>Project 2</strong></legend>
+            <h2 id="H2">Pizza House</h2> <a href="home.htme#P2"></a>
+
+            <article>
+                <h4>About Us</h4>
+                <p>At Pizza House, we believe in giving back to the community that made us and the people who
+                    continue to support us. Over the years we&#39; ve provided food and venue space for countless
+                    fundraisers and charitable organizations.
+                    We also donate over 250 pizzas a year to local schools.</p>
+                </articleS>
                 <hr>
                 <section>
                     <h3>Our Menu</h3>
@@ -162,6 +167,9 @@
                         </tr>
                     </table>
                     <hr>
+                </section>
+
+                <section>
                     <h4>We are open 7 days a week!</h4>
                     <dl>
                         <dt>Sunday-Thursday </dt>
@@ -186,34 +194,35 @@
                         Phone: <a href="tel+1111111111">+111-111-1111</a>
                     </address>
                 </section>
-            </fieldset>
+        </fieldset>
         </article>
         <br><br><br>
 
         <!-- Project 3 -->
 
-        <article>
-            <fieldset>
-                <legend><strong>Project 3</strong></legend>
-                <h2 id="H3">Dream shop</h2> <a href="home.html#P3"></a>
 
+        <fieldset>
+            <legend><strong>Project 3</strong></legend>
+            <h2 id="H3">Dream shop</h2> <a href="home.html#P3"></a>
+            <article>
                 <details>
                     <summary>Dream Shop makes you dreams came true.</summary>
                     <p>Online dress shopping has never been simpler!
                         Shop the latest dress styles and trendy fashion at the best prices. Free shipping over $50.</p>
                 </details>
+            </article>
+
+            <section>
                 <hr>
+                <img src="image/dress1.jpg" alt="weedingdress" width="200" height="250">
+                <img src="image/dress2.jpg" alt="elegantdress" width="200" height="250">
+                <img src="image/dress3.jpg" alt="reddress" width="200" height="250">
+                <img src="image/dress4.jpg" alt="weedingdress" width="300" height="250">
+                <img src="image/dress5.jpg" alt="weedingdresses" width="250" height="250">
+                <figcaption>Some of our store dresses &#x1F457;</figcaption>
+            </section>
 
-                <figure>
-
-                    <img src="image/dress1.jpg" alt="weedingdress" width="200" height="250">
-                    <img src="image/dress2.jpg" alt="elegantdress" width="200" height="250">
-                    <img src="image/dress3.jpg" alt="reddress" width="200" height="250">
-                    <img src="image/dress4.jpg" alt="weedingdress" width="300" height="250">
-                    <img src="image/dress5.jpg" alt="weedingdresses" width="250" height="250">
-                    <figcaption>Some of our store dresses &#x1F457;</figcaption>
-                </figure>
-
+            <section>
                 <h4>Open houres:</h4>
                 <dl>
                     <dt>Monday-Friday</dt>
@@ -226,26 +235,27 @@
                 <hr>
                 <p>Follow us on social media:</p>
                 <img src="image/Instagram.jpg" alt="instagramincon" width="30" height="30">
+            </section>
 
-                <section>
-                    <h3>Our location</h3>
-                    <iframe
-                        src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d187946.96744444827!2d20.8284044265747!3d42.60471559320056!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x13549fe3c8b03f0d%3A0xc54a63861a63cc8a!2sMINNA%20Fashion!5e0!3m2!1sen!2s!4v1695235735287!5m2!1sen!2s"
-                        width="100" height="100" style="border:0;" allowfullscreen="" loading="lazy"
-                        referrerpolicy="no-referrer-when-downgrade"></iframe>
-                    <address>
-                        Magjistralja Prishtin-Ferizaj
-                        <br>
-                        10000,Prishtina
-                        <br>
-                        Kosova
-                        <br><br>
-                        Phone: <a href="tel+1111111111">+111-111-1111</a>
-                        <br>
-                    </address>
-                </section>
-            </fieldset>
-        </article>
+            <section>
+                <h3>Our location</h3>
+                <iframe
+                    src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d187946.96744444827!2d20.8284044265747!3d42.60471559320056!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x13549fe3c8b03f0d%3A0xc54a63861a63cc8a!2sMINNA%20Fashion!5e0!3m2!1sen!2s!4v1695235735287!5m2!1sen!2s"
+                    width="100" height="100" style="border:0;" allowfullscreen="" loading="lazy"
+                    referrerpolicy="no-referrer-when-downgrade"></iframe>
+                <address>
+                    Magjistralja Prishtin-Ferizaj
+                    <br>
+                    10000,Prishtina
+                    <br>
+                    Kosova
+                    <br><br>
+                    Phone: <a href="tel+1111111111">+111-111-1111</a>
+                    <br>
+                </address>
+            </section>
+        </fieldset>
+
     </main>
     <footer>
         <a href="#">Back to top</a>
