--- a/Project/[Week 3] Final Project/myprojects.html
+++ b/Project/[Week 3] Final Project/myprojects.html
@@ -27,8 +27,7 @@
             </nav>
         </article>
 
-
-        <Article>
+        <article>
             <fieldset>
                 <legend><strong>Project 1</strong></legend>
                 <h2 id="H1">ArchEcm Sh.p.k</h2> <a href="home.html#P1"></a>
@@ -38,72 +37,74 @@
                     <li>Renovation</li>
                 </ol>
                 <h2> ArchEcm Sh.p.k</h2>
-                <section>
-                    <img src="image/Logoarchecm.png" alt="ArchEcmLogo" width="150" height="150">
-                    <figure>
-                        <figcaption>ArchEcm Logo</figcaption>
-                    </figure>
-                </section>
-                <section>
-                    <h2>Some of ArchEcm Projects</h2>
-                    <section>
-                        <figure>
-                            <img src="image/archecm.jpg" alt="Weekend House" width="250" height="200">
-                            <figcaption>Weekend House</figcaption>
-                        </figure>
+        </article>
 
-                        <figure>
-                            <img src="image/photo1.jpeg" alt="Rendering of the house" width="250" height="200">
-                            <figcaption>Rendering of the house.</figcaption>
-                        </figure>
+        <section>
+            <img src="image/Logoarchecm.png" alt="ArchEcmLogo" width="150" height="150">
+            <figure>
+                <figcaption>ArchEcm Logo</figcaption>
+            </figure>
 
-                        <figure>
-                            <img src="image/Photo2.jpg" alt="House Project" width="250" height="200">
-                            <figcaption>House Project.</figcaption>
-                        </figure>
+            <section>
+                <h2>Some of ArchEcm Projects</h2>
+                <figure>
+                    <img src="image/archecm.jpg" alt="Weekend House" width="250" height="200">
+                    <figcaption>Weekend House</figcaption>
+                </figure>
 
-                        <figure>
-                            <img src="image/Photo 3.jpg" alt="House Garden" width="250" height="200">
-                            <figcaption>House Garden. </figcaption>
-                        </figure>
+                <figure>
+                    <img src="image/photo1.jpeg" alt="Rendering of the house" width="250" height="200">
+                    <figcaption>Rendering of the house.</figcaption>
+                </figure>
 
-                        <figure>
-                            <img src="image/Baze.jpg" alt="The basis of the project" width="250" height="200">
-                            <figcaption>The basis of the projec. </figcaption>
-                        </figure>
+                <figure>
+                    <img src="image/Photo2.jpg" alt="House Project" width="250" height="200">
+                    <figcaption>House Project.</figcaption>
+                </figure>
 
-                    </section>
-                    <section>
-                        <h3>Our location</h3>
-                        <iframe
-                            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d832.0265940361196!2d21.463722515644783!3d42.45594164592802!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x13548da5ee3408b3%3A0x62bd64c1adccec60!2sBesi%20Hair%20salon!5e0!3m2!1sen!2s!4v1695235400286!5m2!1sen!2s"
-                            width="100" height="100" style="border:0;" allowfullscreen="" loading="lazy"
-                            referrerpolicy="no-referrer-when-downgrade"></iframe>
-                        <address>
-                            Rr.Idriz Seferi <br>
-                            60000,Gjilan
-                            <br>
-                            Kosova
-                            <br><br>
-                            Phone: <a href="tel+38349139139">+38349139139</a>
-                        </address>
-                    </section>
+                <figure>
+                    <img src="image/Photo 3.jpg" alt="House Garden" width="250" height="200">
+                    <figcaption>House Garden. </figcaption>
+                </figure>
+
+                <figure>
+                    <img src="image/Baze.jpg" alt="The basis of the project" width="250" height="200">
+                    <figcaption>The basis of the projec. </figcaption>
+                </figure>
+            </section>
+
+            <section>
+                <h3>Our location</h3>
+                <iframe
+                    src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d832.0265940361196!2d21.463722515644783!3d42.45594164592802!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x13548da5ee3408b3%3A0x62bd64c1adccec60!2sBesi%20Hair%20salon!5e0!3m2!1sen!2s!4v1695235400286!5m2!1sen!2s"
+                    width="100" height="100" style="border:0;" allowfullscreen="" loading="lazy"
+                    referrerpolicy="no-referrer-when-downgrade"></iframe>
+                <address>
+                    Rr.Idriz Seferi <br>
+                    60000,Gjilan
+                    <br>
+                    Kosova
+                    <br><br>
+                    Phone: <a href="tel+38349139139">+38349139139</a>
+                </address>
+            </section>
             </fieldset>
-        </Article>
-        <br><br><br>
-        <!-- Project 2-->
 
-        <fieldset>
-            <legend><strong>Project 2</strong></legend>
-            <h2 id="H2">Pizza House</h2> <a href="home.htme#P2"></a>
+            <br><br><br>
 
-            <article>
-                <h4>About Us</h4>
-                <p>At Pizza House, we believe in giving back to the community that made us and the people who
-                    continue to support us. Over the years we&#39; ve provided food and venue space for countless
-                    fundraisers and charitable organizations.
-                    We also donate over 250 pizzas a year to local schools.</p>
-                </articleS>
+            <!-- Project 2-->
+
+            <fieldset>
+                <legend><strong>Project 2</strong></legend>
+                <h2 id="H2">Pizza House</h2> <a href="home.htme#P2"></a>
+
+                <article>
+                    <h4>About Us</h4>
+                    <p>At Pizza House, we believe in giving back to the community that made us and the people who
+                        continue to support us. Over the years we&#39; ve provided food and venue space for countless
+                        fundraisers and charitable organizations.
+                        We also donate over 250 pizzas a year to local schools.</p>
+                </article>
                 <hr>
                 <section>
                     <h3>Our Menu</h3>
@@ -194,69 +195,71 @@
                         Phone: <a href="tel+1111111111">+111-111-1111</a>
                     </address>
                 </section>
-        </fieldset>
-        </article>
-        <br><br><br>
+            </fieldset>
 
-        <!-- Project 3 -->
+            <br><br><br>
+
+            <!-- Project 3 -->
 
 
-        <fieldset>
-            <legend><strong>Project 3</strong></legend>
-            <h2 id="H3">Dream shop</h2> <a href="home.html#P3"></a>
-            <article>
-                <details>
-                    <summary>Dream Shop makes you dreams came true.</summary>
-                    <p>Online dress shopping has never been simpler!
-                        Shop the latest dress styles and trendy fashion at the best prices. Free shipping over $50.</p>
-                </details>
-            </article>
+            <fieldset>
+                <legend><strong>Project 3</strong></legend>
+                <h2 id="H3">Dream shop</h2> <a href="home.html#P3"></a>
+                <article>
+                    <details>
+                        <summary>Dream Shop makes you dreams came true.</summary>
+                        <p>Online dress shopping has never been simpler!
+                            Shop the latest dress styles and trendy fashion at the best prices. Free shipping over $50.
+                        </p>
+                    </details>
+                </article>
 
-            <section>
-                <hr>
-                <img src="image/dress1.jpg" alt="weedingdress" width="200" height="250">
-                <img src="image/dress2.jpg" alt="elegantdress" width="200" height="250">
-                <img src="image/dress3.jpg" alt="reddress" width="200" height="250">
-                <img src="image/dress4.jpg" alt="weedingdress" width="300" height="250">
-                <img src="image/dress5.jpg" alt="weedingdresses" width="250" height="250">
-                <figcaption>Some of our store dresses &#x1F457;</figcaption>
-            </section>
+                <section>
+                    <hr>
+                    <img src="image/dress1.jpg" alt="weedingdress" width="200" height="250">
+                    <img src="image/dress2.jpg" alt="elegantdress" width="200" height="250">
+                    <img src="image/dress3.jpg" alt="reddress" width="200" height="250">
+                    <img src="image/dress4.jpg" alt="weedingdress" width="300" height="250">
+                    <img src="image/dress5.jpg" alt="weedingdresses" width="250" height="250">
+                    <figcaption>Some of our store dresses &#x1F457;</figcaption>
+                </section>
 
-            <section>
-                <h4>Open houres:</h4>
-                <dl>
-                    <dt>Monday-Friday</dt>
-                    <dd>08:00-22:00</dd>
-                    <dt>Saturday </dt>
-                    <dd>09:00-18:00</dd>
-                </dl>
-                <hr>
-                <p>For Online orders we are open 24h!</p>
-                <hr>
-                <p>Follow us on social media:</p>
-                <img src="image/Instagram.jpg" alt="instagramincon" width="30" height="30">
-            </section>
+                <section>
+                    <h4>Open houres:</h4>
+                    <dl>
+                        <dt>Monday-Friday</dt>
+                        <dd>08:00-22:00</dd>
+                        <dt>Saturday </dt>
+                        <dd>09:00-18:00</dd>
+                    </dl>
+                    <hr>
+                    <p>For Online orders we are open 24h!</p>
+                    <hr>
+                    <p>Follow us on social media:</p>
+                    <img src="image/Instagram.jpg" alt="instagramincon" width="30" height="30">
+                </section>
 
-            <section>
-                <h3>Our location</h3>
-                <iframe
-                    src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d187946.96744444827!2d20.8284044265747!3d42.60471559320056!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x13549fe3c8b03f0d%3A0xc54a63861a63cc8a!2sMINNA%20Fashion!5e0!3m2!1sen!2s!4v1695235735287!5m2!1sen!2s"
-                    width="100" height="100" style="border:0;" allowfullscreen="" loading="lazy"
-                    referrerpolicy="no-referrer-when-downgrade"></iframe>
-                <address>
-                    Magjistralja Prishtin-Ferizaj
-                    <br>
-                    10000,Prishtina
-                    <br>
-                    Kosova
-                    <br><br>
-                    Phone: <a href="tel+1111111111">+111-111-1111</a>
-                    <br>
-                </address>
-            </section>
-        </fieldset>
+                <section>
+                    <h3>Our location</h3>
+                    <iframe
+                        src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d187946.96744444827!2d20.8284044265747!3d42.60471559320056!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x13549fe3c8b03f0d%3A0xc54a63861a63cc8a!2sMINNA%20Fashion!5e0!3m2!1sen!2s!4v1695235735287!5m2!1sen!2s"
+                        width="100" height="100" style="border:0;" allowfullscreen="" loading="lazy"
+                        referrerpolicy="no-referrer-when-downgrade"></iframe>
+                    <address>
+                        Magjistralja Prishtin-Ferizaj
+                        <br>
+                        10000,Prishtina
+                        <br>
+                        Kosova
+                        <br><br>
+                        Phone: <a href="tel+1111111111">+111-111-1111</a>
+                        <br>
+                    </address>
+                </section>
+            </fieldset>
 
     </main>
+
     <footer>
         <a href="#">Back to top</a>
         <hr>
