--- a/Project/[Week 3] Final Project/contact.html
+++ b/Project/[Week 3] Final Project/contact.html
@@ -14,38 +14,44 @@
 <body>
     <header>
         <h1>Contact Me!</h1>
-        <nav area-label="primary-navigation">
-            <hr>
-            <ul>
-                <li> <a href="home.html"> Home&#127968</a> </li>
-                <li> <a href="myprojects.html">My Projects&#x1F31F; </a> </li>
-            </ul>
-            <hr>
-        </nav>
     </header>
 
     <main>
-        <h2>Send me a message</h2>
-        <label for="email">Email</label>
-        <input type="email" id="email" name="email" placeholder="Your Email" required>
+        <article>
+            <nav area-label="primary-navigation">
+                <hr>
+                <ul>
+                    <li> <a href="home.html"> Home&#127968</a> </li>
+                    <li> <a href="myprojects.html">My Projects&#x1F31F; </a> </li>
+                </ul>
+                <hr>
+            </nav>
+        </article>
+        <section>
+            <h2>Send me a message</h2>
+            <label for="email">Email</label>
+            <input type="email" id="email" name="email" placeholder="Your Email" required>
 
-        <br>
+            <br>
 
-        <textarea name="text" id="text" cols="30" rows="10" placeholder="Let your message here"></textarea>
-        <br>
+            <textarea name="text" id="text" cols="30" rows="10" placeholder="Let your message here"></textarea>
+            <br>
 
-        <input type="submit" id="sendmessage" name="sendmessage" value="Send message!">
+            <input type="submit" id="sendmessage" name="sendmessage" value="Send message!">
+        </section>
 
-        <h2>Connect with me:</h2>
+        <section>
+            <h2>Connect with me:</h2>
 
-        <p><a href="https://www.instagram.com/dakkisalihu/"><img src="image/Instagram.jpg" alt="instagramincon"
-                    width="30" height="30"></a>
-            <a href="https://www.linkedin.com/in/dafina-salihu-871874233/"> <img src="image/linkedIn.png.crdownload"
-                    alt="linkedlnlogo" width="30" height="30"> </a>
-            <a href="mailto:dakisalihu@gmail.com"><img src="image/gmaillogo1.png" alt="gmaillogo" width="30"
-                    height="30"></a>
-        </p>
-        <hr>
+            <p><a href="https://www.instagram.com/dakkisalihu/"><img src="image/Instagram.jpg" alt="instagramincon"
+                        width="30" height="30"></a>
+                <a href="https://www.linkedin.com/in/dafina-salihu-871874233/"> <img src="image/linkedIn.png.crdownload"
+                        alt="linkedlnlogo" width="30" height="30"> </a>
+                <a href="mailto:dakisalihu@gmail.com"><img src="image/gmaillogo1.png" alt="gmaillogo" width="30"
+                        height="30"></a>
+            </p>
+            <hr>
+        </section>
     </main>
     <footer>
         <p>All right reserved Dafina Salihu &copy;</p>
