--- a/Project/[Week 3] Final Project/myprojects.html
+++ b/Project/[Week 3] Final Project/myprojects.html
@@ -30,7 +30,7 @@
         <article>
             <fieldset>
                 <legend><strong>Project 1</strong></legend>
-                <h2 id="H1">ArchEcm Sh.p.k</h2> <a href="home.html#P1"></a>
+                <h2 id="H1"> <a href="home.html#P1">ArchEcm Sh.p.k</a></h2>
                 <ol>
                     <li>Designin</li>
                     <li>Construction</li>
@@ -96,7 +96,7 @@
 
             <fieldset>
                 <legend><strong>Project 2</strong></legend>
-                <h2 id="H2">Pizza House</h2> <a href="home.htme#P2"></a>
+                <h2 id="H2"><a href="home.html#P2">Pizza House </a></h2>
 
                 <article>
                     <h4>About Us</h4>
@@ -204,7 +204,7 @@
 
             <fieldset>
                 <legend><strong>Project 3</strong></legend>
-                <h2 id="H3">Dream shop</h2> <a href="home.html#P3"></a>
+                <h2 id="H3"><a href="home.html#P3">Dream shop</a></h2> 
                 <article>
                     <details>
                         <summary>Dream Shop makes you dreams came true.</summary>
